<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/personal_top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" >

        <!-- android:background="@drawable/skin_bg" > -->

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/personal_top_layout" >

        <ImageView
            android:id="@+id/personal_background_image"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="-100dp"
            android:background="@drawable/my_personal_not_login_bg" />

        <ScrollView
            android:id="@+id/personal_scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:orientation="vertical" >

                <!-- 登录前 -->

                <LinearLayout
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:orientation="vertical"
                    android:visibility="visible" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="20dp"
                        android:text="@string/personal_welcome"
                        android:textColor="@color/white"
                        android:textSize="@dimen/medium_text_size" />

                    <Button
                        android:id="@+id/personal_login_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/my_personal_click_login"
                        android:gravity="center"
                        android:text="@string/personal_login"
                        android:textColor="@color/login_button"
                        android:textSize="@dimen/small_text_size"
                        android:textStyle="bold" />
                </LinearLayout>
                <!-- 登录后 -->

                <RelativeLayout
                    android:id="@+id/personal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dip"
                    android:gravity="center_vertical"
                    android:visibility="gone" >

                    <LinearLayout
                        android:id="@+id/avatar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dip"
                        android:background="@drawable/main_avatar_bg"
                        android:orientation="horizontal" >
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/main_persionIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/avatar"
                        android:layout_alignLeft="@+id/avatar"
                        android:layout_alignRight="@+id/avatar"
                        android:layout_alignTop="@+id/avatar"
                        android:layout_margin="11dip"
                        android:scaleType="fitXY"
                        android:src="@drawable/nohead" />

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@+id/avatar"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dip"
                        android:layout_toRightOf="@+id/avatar" >

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="20dip"
                            android:gravity="center_vertical"
                            android:orientation="vertical" >

                            <TextView
                                android:id="@+id/username"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:ellipsize="end"
                                android:text="xiangzhihong8"
                                android:textColor="@color/white" />

                            <!--
                     <TextView
                    android:id="@+id/jobtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="金牌用户"
                    android:textColor="#FFF8E8" />

                <TextView
                    android:id="@+id/dept"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="积分   100"
                    android:textColor="#FFF8E8" />
                            -->
                        </LinearLayout>
                    </RelativeLayout>
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/android_layout_bg"
                    android:orientation="vertical" >

                    <!-- 登錄成功後顯示 -->

                    <LinearLayout
                        android:id="@+id/other_layout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/main_navigation_background"
                        android:gravity="center_horizontal"
                        android:paddingTop="5dp"
                        android:visibility="gone" >

                        <TextView
                            android:id="@+id/paint_writing"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="优惠券\n 0"
                            android:textColor="@color/white"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/paint_size"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="礼品卡\n 0"
                            android:textColor="@color/white"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/paint_color"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="京东豆\n 0"
                            android:textColor="@color/white"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/paint_clear"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="余额\n 100"
                            android:textColor="@color/white"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <TextView
                        style="@style/PersonalCenterText"
                        android:text="@string/personal_account_center" />

                    <LinearLayout style="@style/PersonalMainLayoutStyle" >

                        <RelativeLayout style="@style/PersonalTopStyle" >

                            <ImageView
                                android:id="@+id/personal_icon_04"
                                style="@style/PersonalIconStyle"
                                android:src="@drawable/android_my_jd_collects" />

                            <TextView
                                style="@style/PersonalTextStyle"
                                android:layout_toRightOf="@id/personal_icon_04"
                                android:text="@string/personal_my_focus" />

                            <ImageView
                                style="@style/PersonalRightIconStyle"
                                android:src="@drawable/android_list_idex" />
                        </RelativeLayout>

                        <View style="@style/PersonalLine" />

                        <RelativeLayout style="@style/PersonalNormalStyle" >

                            <ImageView
                                android:id="@+id/personal_icon_05"
                                style="@style/PersonalIconStyle"
                                android:src="@drawable/android_my_jd_discuss" />

                            <TextView
                                style="@style/PersonalTextStyle"
                                android:layout_toRightOf="@id/personal_icon_05"
                                android:text="@string/personal_comment" />

                            <ImageView
                                style="@style/PersonalRightIconStyle"
                                android:src="@drawable/android_list_idex" />
                        </RelativeLayout>

                        <View style="@style/PersonalLine" />

                        <RelativeLayout style="@style/PersonalBottomStyle" >

                            <ImageView
                                android:id="@+id/personal_icon_06"
                                style="@style/PersonalIconStyle"
                                android:src="@drawable/android_my_jd_messages" />

                            <TextView
                                style="@style/PersonalTextStyle"
                                android:layout_toRightOf="@id/personal_icon_06"
                                android:text="@string/personal_information" />

                            <ImageView
                                style="@style/PersonalRightIconStyle"
                                android:src="@drawable/android_list_idex" />
                        </RelativeLayout>

                        <View style="@style/PersonalLine" />

                        <RelativeLayout style="@style/PersonalBottomStyle" >

                            <ImageView
                                android:id="@+id/personal_icon_08"
                                style="@style/PersonalIconStyle"
                                android:src="@drawable/android_my_jd_account_safe" />

                            <TextView
                                style="@style/PersonalTextStyle"
                                android:layout_toRightOf="@id/personal_icon_08"
                                android:text="@string/personal_account" />

                            <ImageView
                                style="@style/PersonalRightIconStyle"
                                android:src="@drawable/android_list_idex" />
                        </RelativeLayout>
                    </LinearLayout>

                    <TextView
                        style="@style/PersonalCenterText"
                        android:text="@string/personal_customer_service" />

                    <!-- *********************  用户中心 *************************** -->

                    <LinearLayout style="@style/PersonalMainLayoutStyle" >

                        <View style="@style/PersonalLine" />

                        <RelativeLayout
                            style="@style/PersonalBottomStyle"
                            android:layout_marginBottom="10dp" >

                            <ImageView
                                android:id="@+id/personal_icon_10"
                                style="@style/PersonalIconStyle"
                                android:src="@drawable/android_my_jd_online_service" />

                            <TextView
                                android:id="@+id/personal_service"
                                style="@style/PersonalTextStyle"
                                android:layout_toRightOf="@id/personal_icon_10"
                                android:text="@string/personal_infomation_service" />

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_toRightOf="@id/personal_service"
                                android:src="@drawable/color_shopping_new" />

                            <ImageView
                                style="@style/PersonalRightIconStyle"
                                android:src="@drawable/android_list_idex" />
                        </RelativeLayout>
                    </LinearLayout>

                    <Button
                        android:id="@+id/personal_exit"
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="14dp"
                        android:layout_marginLeft="25dp"
                        android:layout_marginRight="25dp"
                        android:layout_marginTop="14dp"
                        android:background="@drawable/android_title_bg"
                        android:gravity="center"
                        android:padding="4dp"
                        android:text="退出登录"
                        android:textColor="#fff"
                        android:textSize="18sp"
                        android:visibility="gone" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</RelativeLayout>